--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -6,22 +6,38 @@ body {
 .card {
   width: 400px;
   background: #fff;
-  margin: 16px auto;
+  margin: 16px 8px;
+  padding: 8px;
+  align-self: center;
+  align-content: center;
+  align-items: center;
+  
 }
 
 .title {
   background: #e3f4ff;
+  font-size: 16px;
+  padding: 8px;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 16px 8px;
 }
 
 .button-container {
   background: #e3f4ff;
+  margin: 8px 0px 0px 0px;
+  padding: 8px;
+  text-align: center;
+
 }
 
 button {
+  display: block;
   background: white;
-  border: 1px solid #eee;
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px;
+  padding: 8px 24px;
 }
